@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(drawDetails,interactive_path_grob)
 S3method(drawDetails,interactive_points_grob)
 S3method(drawDetails,interactive_polygon_grob)
 S3method(drawDetails,interactive_polyline_grob)
@@ -17,11 +18,13 @@ export(geom_point_interactive)
 export(geom_polygon_interactive)
 export(geom_rect_interactive)
 export(geom_segment_interactive)
+export(geom_sf_interactive)
 export(geom_text_interactive)
 export(geom_tile_interactive)
 export(geom_vline_interactive)
 export(ggiraph)
 export(ggiraphOutput)
+export(interactive_path_grob)
 export(interactive_points_grob)
 export(interactive_polygon_grob)
 export(interactive_polyline_grob)
@@ -33,6 +36,7 @@ import(ggplot2)
 import(grid)
 importFrom(ggplot2,GeomErrorbar)
 importFrom(ggplot2,PositionIdentity)
+importFrom(ggplot2,coord_sf)
 importFrom(ggplot2,layer)
 importFrom(ggplot2,position_nudge)
 importFrom(ggplot2,remove_missing)
