@@ -1,0 +1,17 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/interactive_path_grob.R
+\name{drawDetails.interactive_path_grob}
+\alias{drawDetails.interactive_path_grob}
+\title{interactive_path_grob drawing}
+\usage{
+\method{drawDetails}{interactive_path_grob}(x, recording)
+}
+\arguments{
+\item{x}{ A grid grob. }
+
+\item{recording}{ A logical value indicating whether a grob
+  is being added to the display list or redrawn from the display list. }
+}
+\description{
+draw an interactive_path_grob
+}
