@@ -1,0 +1,62 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/geom_sf_interactive.R
+\name{geom_sf_interactive}
+\alias{geom_sf_interactive}
+\title{interactive sf objects}
+\usage{
+geom_sf_interactive(mapping = aes(), data = NULL, stat = "sf",
+  position = "identity", na.rm = FALSE, show.legend = NA,
+  inherit.aes = TRUE, ...)
+}
+\arguments{
+\item{mapping}{The aesthetic mapping, see \code{\link[ggplot2]{geom_point}}.}
+
+\item{data}{A data frame, see \code{\link[ggplot2]{geom_point}}.}
+
+\item{stat}{The statistical transformation to use on the data for this
+layer, as a string, see \code{\link[ggplot2]{geom_point}}.}
+
+\item{position}{Postion adjustment, see \code{\link[ggplot2]{geom_point}}.}
+
+\item{na.rm}{See \code{\link[ggplot2]{geom_point}}.}
+
+\item{show.legend}{See \code{\link[ggplot2]{geom_point}}.}
+
+\item{inherit.aes}{See \code{\link[ggplot2]{geom_point}}.}
+
+\item{...}{other arguments passed on to layer. See \code{\link[ggplot2]{geom_point}}.}
+}
+\description{
+The geometry is based on \code{\link[ggplot2]{ggsf}}.
+See the documentation for those functions for more details.
+}
+\examples{
+# add interactive sf objects to a ggplot -------
+library(ggplot2)
+library(ggiraph)
+
+## original code: see section examples of ggplot2::geom_sf help file
+if (requireNamespace("sf", quietly = TRUE)) {
+  nc <- sf::st_read(system.file("shape/nc.shp", package = "sf"), quiet = TRUE)
+  gg <- ggplot(nc) +
+    geom_sf_interactive(aes(fill = AREA, tooltip = NAME, data_id = NAME))
+  ggiraph( ggobj = gg)
+
+  nc_3857 <- sf::st_transform(nc, "+init=epsg:3857")
+
+  # Unfortunately if you plot other types of feature you'll need to use
+  # show.legend to tell ggplot2 what type of legend to use
+  nc_3857$mid <- sf::st_centroid(nc_3857$geometry)
+  gg <- ggplot(nc_3857) +
+    geom_sf(colour = "white") +
+    geom_sf_interactive(aes(geometry = mid,
+        size = AREA, tooltip = NAME, data_id = NAME),
+      show.legend = "point")
+  ggiraph( ggobj = gg)
+
+}
+
+}
+\seealso{
+\code{\link{ggiraph}}
+}
